--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "demos",
+  "name": "redis-js-demo",
   "version": "0.0.1",
   "dependencies": {
-      "redis": "*"
+      "redis": "~2.4.2"
   },
   "scripts": {
   }
